# linear_regression_model

summative/: .gitignore  pyproject.toml
summative/API/: app.py  model.py  prediction.py  requirements.txt  retrain.py
summative/linear_regression/: best_model.joblib  feature_metadata.json  multivariate.ipynb  scaler.joblib
